--- a/TakeTheChange/app/src/main/res/layout/activity_main.xml
+++ b/TakeTheChange/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
+        android:layout_margin="12dp"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="10dp"
         android:gravity="center_horizontal">
@@ -26,10 +26,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <LinearLayout
-
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp">
                 <TextView
                     android:id="@+id/text_view_500"
                     android:padding="2pt"
@@ -211,6 +211,7 @@
                         android:paddingHorizontal="50dp"
                         android:text="CLEAR"
                         android:textSize="25sp"/>
+
                 </LinearLayout>
 
             </LinearLayout>
