--- a/ShareCare/app/src/main/res/layout/activity_starters.xml
+++ b/ShareCare/app/src/main/res/layout/activity_starters.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:layout_margin="10dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="50sp"
-        android:text="I MADE TO A NEW ACTIVITY"/>
+    android:layout_margin="20dp"
+    >
+
+    <ListView
+        android:id="@+id/list_view_starters"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 </LinearLayout>
