--- a/ShareCare/app/src/main/res/layout/activity_main.xml
+++ b/ShareCare/app/src/main/res/layout/activity_main.xml
@@ -4,41 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFADAD"
+    android:background="#FFAE42"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp">
-
-        <TextView
-            android:id="@+id/text_view_name"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view_header"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:textSize="42sp"
-            android:textAlignment="center"
-            android:layout_marginVertical="10dp"
-            android:fontFamily="sans-serif-black"
-            android:textColor="#FF5768"
-            android:text="Share and Care" />
+            app:cardUseCompatPadding="true"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="35dp"
+            app:cardBackgroundColor="#FFD6A5">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:paddingBottom="15dp">
+                <TextView
+                    android:id="@+id/text_view_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="42sp"
+                    android:textAlignment="center"
+                    android:layout_marginVertical="10dp"
+                    android:fontFamily="sans-serif-black"
+                    android:textColor="#B2560D"
+                    android:text="Share and Care" />
+                <TextView
+                    android:id="@+id/text_view_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_name"
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="15sp"
+                    android:scaleY="1.5"
+                    android:scaleX="1.2"
+                    android:textColor="#B2560D"
+                    android:text="share.and.care5916@gmail.com"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_name"
+            android:layout_below="@id/card_view_header"
             android:layout_centerHorizontal="true"
             app:cardUseCompatPadding="true"
             app:cardElevation="10dp"
             app:cardCornerRadius="15dp"
             app:cardBackgroundColor="#FFD6A5">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical">
-
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -46,31 +73,29 @@
                     android:fontFamily="sans-serif-black"
                     android:gravity="center_horizontal"
                     android:text="FOOD SECTION"
-                    android:textColor="#FFA23A"
+                    android:textColor="#FFAA4A"
+                    android:elevation="5dp"
                     android:textSize="30sp" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_starters"
+                    android:layout_below="@id/text_view_name"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/text_view_name"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="25dp"
-                    app:cardBackgroundColor="#FDFFB6"
-                    app:cardCornerRadius="15dp"
+                    android:layout_margin="15dp"
+                    android:scaleX="1.2"
+                    app:cardBackgroundColor="#F9F5E5"
+                    app:cardCornerRadius="25dp"
                     app:cardElevation="10dp">
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
-
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="150dp"
+                            android:layout_height="175dp"
                             android:scaleType="centerCrop"
                             android:src="@drawable/sandwich" />
-
                         <TextView
                             android:id="@+id/text_view_starters"
                             android:layout_width="wrap_content"
@@ -78,53 +103,58 @@
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
                             android:fontFamily="sans-serif-condensed-medium"
+                            android:scaleY="1.2"
                             android:text="Starters"
-                            android:textColor="#FFBF65"
+                            android:textColor="#DB6636"
                             android:textSize="20sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_main_course"
+                    android:layout_below="@id/card_view_starters"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/card_view_starters"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="25dp"
-                    app:cardBackgroundColor="#FDFFB6"
-                    app:cardCornerRadius="15dp"
+                    android:layout_margin="15dp"
+                    android:scaleX="1.2"
+                    app:cardBackgroundColor="#F9F5E5"
+                    app:cardCornerRadius="25dp"
                     app:cardElevation="10dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="150dp"
+                            android:layout_height="175dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/sandwich" />
+                            android:src="@drawable/pizza" />
+
                         <TextView
                             android:id="@+id/text_view_main_course"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
+                            android:scaleY="1.2"
                             android:fontFamily="sans-serif-condensed-medium"
                             android:text="Main Course"
-                            android:textColor="#FFBF65"
+                            android:textColor="#DB6636"
                             android:textSize="20sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/card_view_disert"
+                    android:id="@+id/card_view_dessert"
+                    android:layout_below="@id/card_view_main_course"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/card_view_starters"
                     android:layout_centerHorizontal="true"
-                    android:layout_margin="25dp"
-                    app:cardBackgroundColor="#FDFFB6"
-                    app:cardCornerRadius="15dp"
+                    android:layout_margin="15dp"
+                    android:scaleX="1.2"
+                    app:cardBackgroundColor="#F9F5E5"
+                    app:cardCornerRadius="25dp"
                     app:cardElevation="10dp">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -132,31 +162,34 @@
                         android:orientation="vertical">
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="150dp"
+                            android:layout_height="175dp"
                             android:scaleType="centerCrop"
                             android:src="@drawable/cake" />
                         <TextView
-                            android:id="@+id/text_view_disert"
+                            android:id="@+id/text_view_dessert"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
+                            android:scaleY="1.2"
                             android:fontFamily="sans-serif-condensed-medium"
-                            android:textColor="#FFBF65"
+                            android:textColor="#DB6636"
                             android:textSize="20sp"
-                            android:text="Disert"/>
+                            android:text="Dessert" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view_beverage"
+                    android:layout_below="@id/card_view_dessert"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/card_view_starters"
                     android:layout_centerHorizontal="true"
-                    android:layout_margin="25dp"
-                    app:cardBackgroundColor="#FDFFB6"
-                    app:cardCornerRadius="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="30dp"
+                    android:scaleX="1.2"
+                    app:cardBackgroundColor="#F9F5E5"
+                    app:cardCornerRadius="25dp"
                     app:cardElevation="10dp">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -164,7 +197,7 @@
                         android:orientation="vertical">
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="150dp"
+                            android:layout_height="175dp"
                             android:scaleType="centerCrop"
                             android:src="@drawable/drinks" />
                         <TextView
@@ -173,8 +206,9 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
+                            android:scaleY="1.2"
                             android:fontFamily="sans-serif-condensed-medium"
-                            android:textColor="#FFBF65"
+                            android:textColor="#DB6636"
                             android:textSize="20sp"
                             android:text="Beverage"/>
                     </LinearLayout>
