--- a/ShareCare/app/src/main/res/layout/activity_dessert.xml
+++ b/ShareCare/app/src/main/res/layout/activity_dessert.xml
@@ -4,11 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFAE42"
     tools:context=".DessertActivity">
-    <ListView
-        android:layout_margin="25dp"
-        android:id="@+id/list_view_dessert"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="10.0sp"/>
+        android:layout_height="match_parent">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="25dp"
+            app:cardBackgroundColor="#FFD6A5">
+            <ListView
+                android:layout_margin="25dp"
+                android:id="@+id/list_view_dessert"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:dividerHeight="10.0sp"/>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
