--- a/ShareCare/app/src/main/res/layout/activity_drinks.xml
+++ b/ShareCare/app/src/main/res/layout/activity_drinks.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFAE42"
-    tools:context=".DessertActivity">
+    tools:context=".DrinksActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,10 +20,11 @@
             app:cardCornerRadius="25dp"
             app:cardBackgroundColor="#FFD6A5">
             <ListView
-                android:id="@+id/list_view_starters"
+                android:id="@+id/list_view_drinks"
+                android:layout_margin="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:dividerHeight="12.0sp" />
+                android:dividerHeight="20.0sp"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
