--- a/ShareCare/app/src/main/res/layout/activity_main.xml
+++ b/ShareCare/app/src/main/res/layout/activity_main.xml
@@ -180,7 +180,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/card_view_beverage"
+                    android:id="@+id/card_view_drinks"
                     android:layout_below="@id/card_view_dessert"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
@@ -201,7 +201,7 @@
                             android:scaleType="centerCrop"
                             android:src="@drawable/drinks" />
                         <TextView
-                            android:id="@+id/text_view_beverage"
+                            android:id="@+id/text_view_drinks"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -210,7 +210,7 @@
                             android:fontFamily="sans-serif-condensed-medium"
                             android:textColor="#DB6636"
                             android:textSize="20sp"
-                            android:text="Beverage"/>
+                            android:text="Drinks"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
