--- a/DumbApp/app/src/main/res/layout/activity_main.xml
+++ b/DumbApp/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="40dp"
+    android:gravity="center_horizontal">
     <TextView
+        android:id="@+id/text_view_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="THE DUMB APP"
+        android:textSize="40sp"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_score"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:layout_below="@id/text_view_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        app:cardCornerRadius="100dp">
+        <TextView
+            android:id="@+id/text_view_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="40dp"
+            android:text="0"
+            android:textSize="100sp" />
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/text_view_question"
+        android:layout_below="@id/card_view_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="QUESTION!"
+        android:textSize="30dp"
+        android:layout_marginBottom="30dp"/>
+    <Button
+        android:id="@+id/button_wrong"
+        android:layout_below="@id/text_view_question"
+        android:scaleY="1.2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="❌"/>
+    <Button
+        android:id="@+id/button_right"
+        android:layout_below="@id/text_view_question"
+        android:layout_toRightOf="@id/button_wrong"
+        android:layout_marginLeft="140dp"
+        android:scaleY="1.2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="✔️"/>
+</RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
