--- a/TakeTheChange/app/src/main/res/layout-land/activity_main.xml
+++ b/TakeTheChange/app/src/main/res/layout-land/activity_main.xml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="35sp"
-                android:layout_marginVertical="40dp"
+                android:layout_marginVertical="2dp"
                 android:text="TAKA:"/>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -29,95 +29,106 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:layout_marginVertical="20dp"
-                app:cardCornerRadius="25pt"
+                android:layout_marginTop="25dp"
+                app:cardCornerRadius="25dp"
                 app:cardBackgroundColor="#6751A2">
                 <LinearLayout
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:paddingHorizontal="10dp">
-                    <TextView
-                        android:id="@+id/text_view_500"
-                        android:padding="2pt"
+                    android:layout_marginHorizontal="10dp">
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="500:0"
-                        android:layout_marginVertical="5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp" />
-                    <TextView
-                        android:id="@+id/text_view_100"
-                        android:padding="2pt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="100:0"
-                        android:layout_marginVertical="2.5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:id="@+id/text_view_50"
-                        android:padding="2pt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="50:0"
-                        android:layout_marginVertical="2.5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:id="@+id/text_view_20"
-                        android:padding="2pt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="20:0"
-                        android:layout_marginVertical="2.5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:id="@+id/text_view_10"
-                        android:padding="2pt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="10:0"
-                        android:layout_marginVertical="2.5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:id="@+id/text_view_5"
-                        android:padding="2pt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="5:0"
-                        android:layout_marginVertical="2.5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
+                        android:orientation="vertical"
+                        android:layout_marginRight="10dp">
+                        <TextView
+                            android:id="@+id/text_view_500"
+                            android:padding="2pt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="500:0"
+                            android:layout_marginVertical="8dp"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp"/>
+                        <TextView
+                            android:id="@+id/text_view_100"
+                            android:padding="2pt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="100:0"
+                            android:layout_marginVertical="8dp"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp"/>
+                        <TextView
+                            android:id="@+id/text_view_50"
+                            android:padding="2pt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="50:0"
+                            android:layout_marginVertical="8dp"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp"/>
+                        <TextView
+                            android:id="@+id/text_view_20"
+                            android:padding="2pt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="20:0"
+                            android:layout_marginVertical="8dp"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp"/>
+                    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/text_view_2"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="2pt"
-                        android:text="2:0"
-                        android:layout_marginVertical="2.5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:id="@+id/text_view_1"
-                        android:padding="2pt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1:0"
-                        android:layout_marginVertical="5dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"/>
+                        android:orientation="vertical"
+                        >
+                        <TextView
+                            android:id="@+id/text_view_10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="8dp"
+                            android:padding="2pt"
+                            android:text="10:0"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp" />
+                        <TextView
+                            android:id="@+id/text_view_5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="8dp"
+                            android:padding="2pt"
+                            android:text="5:0"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp" />
+                        <TextView
+                            android:id="@+id/text_view_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="8dp"
+                            android:padding="2pt"
+                            android:text="2:0"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp" />
+                        <TextView
+                            android:id="@+id/text_view_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="8dp"
+                            android:padding="2pt"
+                            android:text="1:0"
+                            android:textColor="#FFFFFF"
+                            android:textSize="25sp" />
+                    </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginVertical="25dp">
+                android:layout_marginVertical="5dp">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -127,7 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="9"
                         android:textSize="25sp"/>
                     <Button
@@ -135,7 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="8"
                         android:textSize="25sp"/>
                     <Button
@@ -143,7 +154,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="7"
                         android:textSize="25sp"/>
                 </LinearLayout>
@@ -157,7 +168,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="6"
                         android:textSize="25sp"/>
                     <Button
@@ -165,7 +176,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="5"
                         android:textSize="25sp"/>
                     <Button
@@ -173,7 +184,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="4"
                         android:textSize="25sp"/>
                 </LinearLayout>
@@ -187,7 +198,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="3"
                         android:textSize="25sp"/>
                     <Button
@@ -195,7 +206,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="2"
                         android:textSize="25sp"/>
                     <Button
@@ -203,7 +214,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="1"
                         android:textSize="25sp"/>
                 </LinearLayout>
@@ -216,7 +227,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:text="0"
                         android:textSize="25sp"/>
                     <Button
@@ -224,7 +235,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:paddingVertical="20dp"
+                        android:paddingVertical="15dp"
                         android:paddingHorizontal="50dp"
                         android:text="CLEAR"
                         android:textSize="25sp"/>
