--- a/TakeTheChange/app/src/main/res/layout-land/activity_main.xml
+++ b/TakeTheChange/app/src/main/res/layout-land/activity_main.xml
@@ -14,6 +14,15 @@
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="10dp"
         android:gravity="center_horizontal">
+        <androidx.cardview.widget.CardView
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="#6C88C4"
+            app:contentPaddingLeft="6dp"
+            app:contentPaddingRight="6dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="20dp"
+            android:layout_marginHorizontal="40dp">
             <TextView
                 android:id="@+id/text_view_taka"
                 android:layout_width="wrap_content"
@@ -21,10 +30,12 @@
                 android:textSize="35sp"
                 android:layout_marginVertical="2dp"
                 android:text="TAKA:"/>
+        </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
