--- a/MyDevelopments/app/src/main/res/layout/activity_main.xml
+++ b/MyDevelopments/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,11 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recycler_view_projects"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="10dp">
 </androidx.recyclerview.widget.RecyclerView>
