--- a/MyDevelopments/app/src/main/res/layout/item_project.xml
+++ b/MyDevelopments/app/src/main/res/layout/item_project.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
-    android:elevation="10dp">
+    android:elevation="10dp"
+    app:cardBackgroundColor="#9AAFFF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,15 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="20dp"
-            app:cardCornerRadius="15dp"
+            app:cardCornerRadius="8dp"
             android:backgroundTint="@android:color/background_light">
             <ImageView
                 android:id="@+id/image_view_project_icon"
-                android:layout_margin="7dp"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background"/>
+                tools:src="@drawable/ic_launcher_background"/>
         </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/text_view_title"
@@ -35,6 +36,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="7dp"
             android:textSize="20sp"
+            android:textColor="#000033"
             android:text="THE APP TITLE" />
 
         <TextView
@@ -46,6 +48,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="2dp"
             android:textSize="15sp"
+            android:textColor="#333399"
             android:text="This is app Description!"/>
 
     </RelativeLayout>
