--- a/BroadcastFunApp/app/src/main/res/layout/activity_wifi_state.xml
+++ b/BroadcastFunApp/app/src/main/res/layout/activity_wifi_state.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BatteryPercentageActivity"
+    tools:context=".WifiStateActivity"
     android:gravity="center">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="THIS IS BATTER PERCENTAGE ACTIVITY"/>
+        android:text="THIS IS 'WIFI-STATE' AVTIVITY"/>
 
 </LinearLayout>
