--- a/BroadcastFunApp/app/src/main/res/layout/activity_custom_broadcast.xml
+++ b/BroadcastFunApp/app/src/main/res/layout/activity_custom_broadcast.xml
@@ -6,8 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".CustomBroadcastActivity"
     android:gravity="center">
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:cardElevation="20dp"
+        android:padding="10dp"
+        app:cardBackgroundColor="#E77577"
+        app:cardCornerRadius="15dp"
+        android:layout_margin="20dp">
+    <TextView
+        android:id="@+id/text_view_broadcast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="30sp"
         android:text="THIS IS 'CUSTOM-BROADCAST' AVTIVITY"/>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
