--- a/BroadcastFunApp/app/src/main/res/layout/activity_main.xml
+++ b/BroadcastFunApp/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#293241">
     <EditText
         android:id="@+id/edit_text_custom_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:visibility="gone"
-        android:text = "Enter Custom Message:"/>
+        android:hint = "Enter Custom Message:"/>
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
